--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ body {
   color: white;
   line-height: 1.3;
   -webkit-font-smoothing: antialiased;
-  border:white 10px solid;
 }
 
 #particles {
@@ -180,19 +179,22 @@ button:active {
 
 @media only screen and (max-width: 568px) {
   #intro {
-    padding: 0 10px;
+    padding: 10px;
   }
+
+
+
   h1 {
     font-size: 2em;
   }
   h1::after {
-    height: 6px;
+    height: 5px;
   }
 
-  h2 {font-size: 5em}
+  h2 {font-size: 3em}
 
   p {
-    font-size: 1.5em;
+    font-size: 1em;
   }
   .btn {
     font-size: 16px;
@@ -200,11 +202,25 @@ button:active {
 }
 
 @media only screen and (max-width: 320px) {
+
+.logo{
+  color:white;
+  position: absolute;
+  top: 0;
+  padding: 20px;
+  width: 100%;
+  font-size:10px;
+}
+
   h1 {
     font-size: 1.5em;
   }
   h1::after {
-    height: 4px;
+    height: 2px;
   }
 
-  h2{font-size: 1.5em;}
+  h2{font-size: 3em;}
+  p {
+    font-size:1em;
+  }
+}
